--- a/.github/workflows/02_workflow.yml
+++ b/.github/workflows/02_workflow.yml
@@ -30,6 +30,7 @@ jobs: # By default, jobs run in parallel
             uses: actions/checkout@v4
 
           - name: Install dependencies
+            working-directory: ./02 Starting Project
             run: npm install
 
           - name: Build project
