--- a/.github/workflows/04_workflow.yml
+++ b/.github/workflows/04_workflow.yml
@@ -2,10 +2,15 @@ name: "04 Events Demo"
 on: 
     pull_request:
         types: [opened, edited] #opened # so activity types determines which pull request type should trigger a workflow
+        # AND
+        branches:
+          - main # when the pull request TARGETS the main
 
       # OR
 
     workflow_dispatch:
+
+
     push:
         branches: 
             - main
