added controlling workflow & updated artifact to v4

--- a/.github/workflows/04_events.yml
+++ b/.github/workflows/04_events.yml
@@ -11,21 +11,21 @@ on:
     workflow_dispatch: #manual trigger
 
 
-    push:
-        branches: 
-            - main
-            # - dev-* # meaning all branches that starts with dev- eg. dev-new, dev-this-is-new
-            - feat/* # meaning all branches that starts with feat/ eg. feat/new, feat/cart, feat/checkout
-            - feat/** # meaning all branches that starts with feat/x/y eg. feat/cart, feat/new, feat/new/cart, feat/checkout/v2
+    # push:
+    #     branches: 
+    #         - main
+    #         # - dev-* # meaning all branches that starts with dev- eg. dev-new, dev-this-is-new
+    #         - feat/* # meaning all branches that starts with feat/ eg. feat/new, feat/cart, feat/checkout
+    #         - feat/** # meaning all branches that starts with feat/x/y eg. feat/cart, feat/new, feat/new/cart, feat/checkout/v2
 
-            # AND
+    #         # AND
 
-        paths-ignore:
-            - '.github/workflows/*' # meaning if .github/workflows/* is included in the changes, then ignore running the workflow.
-            # even if changes happened in other files, as far as this file is part, workflow will not run
-        # paths:
-        #    - '*/version.js' # meaning trigger workflow only if version.js was also changed. even if changes happens in other files, if version.js
-           # doesn't change workflow will not run
+    #     paths-ignore:
+    #         - '.github/workflows/*' # meaning if .github/workflows/* is included in the changes, then ignore running the workflow.
+    #         # even if changes happened in other files, as far as this file is part, workflow will not run
+    #     # paths:
+    #     #    - '*/version.js' # meaning trigger workflow only if version.js was also changed. even if changes happens in other files, if version.js
+    #        # doesn't change workflow will not run
 jobs:
   deploy:
     runs-on: ubuntu-latest
