--- a/.github/workflows/07_controlling_workflow.yml
+++ b/.github/workflows/07_controlling_workflow.yml
@@ -97,3 +97,13 @@ jobs:
 
       - name: Deploy
         run: echo "Deploying..."
+
+  report:
+    # meaning this job will run ONLY if any of the other jobs failed
+    if: failure() 
+    runs-on: ubuntu-latest
+    steps:
+      - name: Output information
+        run: |
+          echo "Something went wrong"
+          echo ${{ github }}
