--- a/.github/workflows/04_events.yml
+++ b/.github/workflows/04_events.yml
@@ -1,10 +1,10 @@
 name: "04 Events Demo"
 on: 
-    pull_request:
-        types: [opened, edited] #opened # so activity types determines which pull request type should trigger a workflow
-        # AND
-        branches:
-          - main # when the pull request TARGETS the main
+    # pull_request:
+    #     types: [opened, edited] #opened # so activity types determines which pull request type should trigger a workflow
+    #     # AND
+    #     branches:
+    #       - main # when the pull request TARGETS the main
 
       # OR
 
