fixed naming for deploy workflow

--- a/.github/workflows/08_reusable.yml
+++ b/.github/workflows/08_reusable.yml
@@ -1,7 +1,7 @@
 name: "08 Reusable workflow"
 on: workflow_call # this allows this workflow to be called by other workflows
 jobs: 
-    build:
+    deploy:
         runs-on: ubuntu-latest
         steps: 
             - name: Ouptut information
