added secrete inputs to reusable workflow & fixed text error

--- a/.github/workflows/08_reusable.yml
+++ b/.github/workflows/08_reusable.yml
@@ -15,7 +15,7 @@ on:
             deployment-username:
                 required: true
                 description: ssh username
-            deploytment-password:
+            deployment-password:
                 required: true
                 description: ssh password
                 
