--- a/.github/workflows/09_use_reusable.yml
+++ b/.github/workflows/09_use_reusable.yml
@@ -1,8 +1,8 @@
 name: "09 Use Reusable"
-on: 
-    push:
-        branches:
-            - main
+on: workflow_dispatch # manual trigger
+    # push:
+    #     branches:
+    #         - main
 jobs: 
     build:
         runs-on: ubuntu-latest
