run job in container & attempt to fix no such container error

--- a/.github/workflows/10_deploy_with_containers.yml
+++ b/.github/workflows/10_deploy_with_containers.yml
@@ -20,8 +20,8 @@ jobs:
 
        # env variables here are variable needed by the image NOT needed by the steps (!important)
        # you usually don't need this env here unless the docker image requires it from the documentation
-       env: 
-         MONGODB_CONNECTION_PROTOCOL: mongodb+srv
+      #  env: 
+      #    MONGODB_CONNECTION_PROTOCOL: mongodb+srv
 
 
     env:
