--- a/.github/workflows/11_custom_actions.yml
+++ b/.github/workflows/11_custom_actions.yml
@@ -10,11 +10,15 @@ jobs:
       - name: Get code
         uses: actions/checkout@v4
       - name: Load and Cache Dependencies - Custom Action
+        id: cache-deps
         # path is relatative to the root of the project
         uses: ./.github/actions/cache-deps # github action will automatically look for action.yml file in this folder
         # (if action is in another repository) path for a repository custom action [account name]/[repository name]/.github/[actions folder name (actions)]/path-to-action-file
         with:
           caching: 'false'
+      
+      - name: Output information
+        run: echo "cached used? ${{steps.cache-deps.outputs.used-cache}}"
 
       - name: Lint code
         working-directory: ./06 Starting Project
