--- a/.github/workflows/11_custom_actions.yml
+++ b/.github/workflows/11_custom_actions.yml
@@ -1,8 +1,8 @@
 name: "11 Custom Actions"
-on:
-  push:
-    branches:
-      - main
+on: workflow_dispatch
+  # push:
+  #   branches:
+  #     - main
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -80,3 +80,10 @@ jobs:
         uses: actions/checkout@v4
       - name: Run custom js action
         uses: ./.github/actions/deploy-s3-javascript
+        env:
+          AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRETE_ACCESS_KEY: ${{ secrets.AWS_SECRETE_ACCESS_KEY }}
+        with:
+          bucket: dk1000-gha-custom-action-hosting
+          dist-folder:  ./06 Starting Project/dist
+          region: 'us-east-1'
